--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </p>
   <p>I am a founding member of Creative Commons Turkey and have been active in the CC Global Network since 2012. Currently, I continue serving voluntarily at CC Turkey Chapter as a representative to the Global Network Council. I have been volunteering for E-LIS: Eprints in Library and Information Science as an editor for Turkey since 2005. I am a Steering Committee Member at Open Repositories from August 2021 for a 3-year period.
 </p>
-<img src="https://pbs.twimg.com/profile_images/1529863097820790784/qZlqm0gK_400x400.jpg" alt="photo" width=“150” height=“150”>
+<img src="https://pbs.twimg.com/profile_images/1529863097820790784/qZlqm0gK_400x400.jpg" alt="photo" style="width=150 height=150">
 
   </body>
 </html>
